behavioral: add MovieService.getMoviesAsPage returning MediaPage
Add protocol-agnostic getMoviesAsPage(MediaPaginationOptions) alongside
existing getMoviesWithFilter. Migrate all pagination tests in
MovieServiceTest (34 tests) and MovieServiceIT (46 tests) in-place to
use the new method. Remove 7 cursor-rejection IT tests since cursor
validation is now the protocol layer's responsibility. Test count for
unit tests stays at 53; IT tests go from 53 to 46.